--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- Google Font (optional) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link rel= "icon" href= "http://www.w3.org/2000/svg">
 
   <style>
     :root{
