--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Google Font (optional) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <link rel= "icon" href= "http://www.w3.org/2000/svg">
+  <link rel= "icon" href= "https://res.cloudinary.com/det5cjrev/image/upload/v1758332619/36f37828-9eee-48b3-bec0-b1c0a315aaae_m2nxwi.png">
 
   <style>
     :root{
